@@ -53,19 +53,12 @@ MIME::Fast - Parsing MIME messages (wrapper for C gmime library)
 
 =head1 DESCRIPTION
 
-WARNING: This documentation is in under-update state. Some things
-could be out of date, new objects are not described yet. But the above
-example works well.
-
 MIME::Fast is a perl module for creating, editing and parsing MIME messages.
 This module is based on the very good C library called
 gmime. MIME::Fast outght to be faster and should
 use less memory and CPU resources than standard MIME (perl module),
 because MIME::Fast is the wrapper for C functions (calling C function
 is much, much less expensive than calling perl function).
-
-B<WARNING>: this code is still in beta phase, and interface methods
-could change.
 
 =head1 INHERITANCE
 
@@ -1397,5 +1390,5 @@ Piotr Klaban, post@klaban.torun.pl
 perl(1).
 
 The homepage of gmime C library at http://spruce.sourceforge.net/gmime/
-The homepage of MIME::Fast perl module is available at http://www.klaban.torun.pl/prog/MIME::Fast/
+The homepage of MIME::Fast perl module is available at http://search.cpan.org/dist/MIME-Fast/
 
